fixing main content spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ p {
 
 #main-content {
   margin: 0% 20% 30% 20%;
-  padding: 5% 5% 1% 5%;
+  padding: 10% 5% 1% 5%;
   background-color: white;
   border-radius: 20px;
 }
